[gd_scene load_steps=2 format=2]

[ext_resource path="res://new_account_screen.gd" type="Script" id=1]

[node name="new_account_screen" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 123.0
margin_top = 113.0
margin_right = 306.0
margin_bottom = 244.0
custom_constants/separation = 11

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 183.0
margin_bottom = 60.0
custom_constants/separation = 12

[node name="username" type="LineEdit" parent="VBoxContainer/VBoxContainer2"]
margin_right = 183.0
margin_bottom = 24.0
placeholder_text = "warlord409"

[node name="password" type="LineEdit" parent="VBoxContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 183.0
margin_bottom = 60.0
placeholder_text = "password"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 71.0
margin_right = 183.0
margin_bottom = 85.0

[node name="feedback_msg" type="Label" parent="VBoxContainer/VBoxContainer3"]
margin_right = 183.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.713726, 0.156863, 0.156863, 1 )
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 183.0
margin_bottom = 122.0
custom_constants/separation = 6

[node name="create_account" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_right = 183.0
margin_bottom = 20.0
text = "Create account"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 183.0
margin_bottom = 26.0

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 57.0
margin_top = 58.0
margin_right = 97.0
margin_bottom = 98.0
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="VBoxContainer2"]
margin_right = 40.0
margin_bottom = 20.0
text = "<-"

[connection signal="pressed" from="VBoxContainer/VBoxContainer/create_account" to="." method="_on_create_account_pressed"]
[connection signal="pressed" from="VBoxContainer2/Button" to="." method="_on_Button_pressed"]
